--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -298,9 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "df = states.to_frame()\n",
@@ -309,6 +317,7 @@
     "final_results['DuFI'] = np.nan\n",
     "for index_tuple, row_series in final_results.iterrows():\n",
     "    state_name = index_tuple[0]\n",
+    "    print(state_name)\n",
     "    state_mask_series = (df.index.get_level_values('state') == state_name)\n",
     "    time_stamp = index_tuple[1]\n",
     "    date_mask_series = (df.index.get_level_values('date') == time_stamp)\n",
@@ -325,19 +334,22 @@
     "                mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
     "                population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
     "            days_until_full_infection = int((HERD_IMMUNITY_THRESHOLD*population - infected_population)/case_rate)\n",
-    "            final_results.loc[index_tuple, 'DuFI'] = days_until_full_infection"
+    "            final_results.loc[index_tuple, 'DuFI'] = days_until_full_infection\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "print('Done.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pickling to /home/jovyan/repos/notebooks/covid19/saves/pickle/final_results.pickle\n"
+      "Pickling to C:\\Users\\dev\\Documents\\repositories\\notebooks\\covid19\\saves\\pickle\\final_results.pickle\n"
      ]
     }
    ],
@@ -685,9 +697,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COVID-19 (Python 3.7.7)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "covid19"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -699,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
