--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -393,50 +393,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.73</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">HI</th>\n",
+       "      <th>2020-06-19</th>\n",
+       "      <td>1.91</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>2.28</td>\n",
+       "      <td>67972.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-20</th>\n",
+       "      <td>1.87</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>45314.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-21</th>\n",
+       "      <td>1.78</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>87390.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>1.66</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>2.52</td>\n",
        "      <td>1.30</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>111223.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>1.31</td>\n",
-       "      <td>212935.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>1.06</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>1.28</td>\n",
-       "      <td>319401.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>1.06</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>159699.0</td>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>1.50</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>611727.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -445,14 +445,14 @@
       "text/plain": [
        "                    ML  Low_90  High_90  Low_50  High_50      DuFI\n",
        "state date                                                        \n",
-       "AK    2020-05-19  1.07    0.35     1.73    0.73     1.30       NaN\n",
-       "      2020-05-20  1.07    0.33     1.72    0.74     1.31  212935.0\n",
-       "      2020-05-21  1.07    0.34     1.73    0.77     1.34       NaN\n",
-       "      2020-05-22  1.06    0.32     1.72    0.70     1.28  319401.0\n",
-       "      2020-05-23  1.06    0.33     1.73    0.71     1.29  159699.0"
+       "HI    2020-06-19  1.91    0.86     2.94    1.41     2.28   67972.0\n",
+       "      2020-06-20  1.87    0.88     2.84    1.39     2.21   45314.0\n",
+       "      2020-06-21  1.78    0.85     2.69    1.32     2.09   87390.0\n",
+       "      2020-06-22  1.66    0.78     2.52    1.30     2.02  111223.0\n",
+       "      2020-06-23  1.50    0.66     2.30    1.13     1.81  611727.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -511,65 +511,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>18524.0</td>\n",
+       "      <th>2020-06-19</th>\n",
+       "      <td>1.57</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>6522.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>16002.0</td>\n",
+       "      <th>2020-06-20</th>\n",
+       "      <td>1.46</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>5084.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>23892.0</td>\n",
+       "      <th>2020-06-21</th>\n",
+       "      <td>1.40</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>5824.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>19117.0</td>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>1.34</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>6864.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>1.32</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>4101.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
-       "state date                                                       \n",
-       "TX    2020-05-19  0.90    0.72     1.04    0.82     0.95  18524.0\n",
-       "      2020-05-20  0.80    0.62     0.94    0.72     0.85  16002.0\n",
-       "      2020-05-21  0.77    0.59     0.91    0.66     0.80  23892.0\n",
-       "      2020-05-22  0.66    0.48     0.81    0.56     0.70  19117.0\n",
-       "      2020-05-23  0.51    0.32     0.66    0.42     0.56      NaN"
+       "                    ML  Low_90  High_90  Low_50  High_50    DuFI\n",
+       "state date                                                      \n",
+       "TX    2020-06-19  1.57    1.44     1.67    1.49     1.59  6522.0\n",
+       "      2020-06-20  1.46    1.33     1.56    1.38     1.48  5084.0\n",
+       "      2020-06-21  1.40    1.28     1.50    1.31     1.41  5824.0\n",
+       "      2020-06-22  1.34    1.22     1.44    1.29     1.38  6864.0\n",
+       "      2020-06-23  1.32    1.20     1.42    1.26     1.35  4101.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -620,29 +620,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>49912.0</td>\n",
-       "      <td>0.198492</td>\n",
+       "      <th>2020-06-19</th>\n",
+       "      <td>103305.0</td>\n",
+       "      <td>0.410828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>51323.0</td>\n",
-       "      <td>0.204104</td>\n",
+       "      <th>2020-06-20</th>\n",
+       "      <td>107735.0</td>\n",
+       "      <td>0.428445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>52268.0</td>\n",
-       "      <td>0.207862</td>\n",
+       "      <th>2020-06-21</th>\n",
+       "      <td>111601.0</td>\n",
+       "      <td>0.443820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>53449.0</td>\n",
-       "      <td>0.212558</td>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>114881.0</td>\n",
+       "      <td>0.456864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>53449.0</td>\n",
-       "      <td>0.212558</td>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>120370.0</td>\n",
+       "      <td>0.478693</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -651,14 +651,14 @@
       "text/plain": [
        "                  cumulative_cases  percent_population\n",
        "state date                                            \n",
-       "TX    2020-05-19           49912.0            0.198492\n",
-       "      2020-05-20           51323.0            0.204104\n",
-       "      2020-05-21           52268.0            0.207862\n",
-       "      2020-05-22           53449.0            0.212558\n",
-       "      2020-05-23           53449.0            0.212558"
+       "TX    2020-06-19          103305.0            0.410828\n",
+       "      2020-06-20          107735.0            0.428445\n",
+       "      2020-06-21          111601.0            0.443820\n",
+       "      2020-06-22          114881.0            0.456864\n",
+       "      2020-06-23          120370.0            0.478693"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,9 +685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Foundations (Python 3.8.3)",
    "language": "python",
-   "name": "python3"
+   "name": "data_foundations_project"
   },
   "language_info": {
    "codemirror_mode": {
@@ -699,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
