more covid19 stuff

--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,50 +405,50 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">HI</th>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>1.49</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>111223.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>1.31</td>\n",
-       "      <td>212935.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>1.07</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>1.06</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.70</td>\n",
+       "      <th>2020-06-23</th>\n",
        "      <td>1.28</td>\n",
-       "      <td>319401.0</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>611727.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>1.06</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>159699.0</td>\n",
+       "      <th>2020-06-24</th>\n",
+       "      <td>1.16</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>407817.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-25</th>\n",
+       "      <td>1.21</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>76464.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-26</th>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2.27</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>81561.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -457,14 +457,14 @@
       "text/plain": [
        "                    ML  Low_90  High_90  Low_50  High_50      DuFI\n",
        "state date                                                        \n",
-       "AK    2020-05-19  1.07    0.35     1.73    0.73     1.30       NaN\n",
-       "      2020-05-20  1.07    0.33     1.72    0.74     1.31  212935.0\n",
-       "      2020-05-21  1.07    0.34     1.73    0.77     1.34       NaN\n",
-       "      2020-05-22  1.06    0.32     1.72    0.70     1.28  319401.0\n",
-       "      2020-05-23  1.06    0.33     1.73    0.71     1.29  159699.0"
+       "HI    2020-06-22  1.49    0.26     2.51    0.95     1.90  111223.0\n",
+       "      2020-06-23  1.28    0.09     2.23    0.72     1.66  611727.0\n",
+       "      2020-06-24  1.16    0.03     2.10    0.63     1.56  407817.0\n",
+       "      2020-06-25  1.21    0.09     2.20    0.63     1.58   76464.0\n",
+       "      2020-06-26  1.25    0.13     2.27    0.66     1.62   81561.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,65 +523,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>18524.0</td>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>1.55</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>6864.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>16002.0</td>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>1.61</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>4101.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>23892.0</td>\n",
+       "      <th>2020-06-24</th>\n",
+       "      <td>1.48</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>1.38</td>\n",
+       "      <td>1.51</td>\n",
+       "      <td>4054.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>19117.0</td>\n",
+       "      <th>2020-06-25</th>\n",
+       "      <td>1.40</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>3752.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2020-06-26</th>\n",
+       "      <td>1.31</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>3941.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
-       "state date                                                       \n",
-       "TX    2020-05-19  0.90    0.72     1.04    0.82     0.95  18524.0\n",
-       "      2020-05-20  0.80    0.62     0.94    0.72     0.85  16002.0\n",
-       "      2020-05-21  0.77    0.59     0.91    0.66     0.80  23892.0\n",
-       "      2020-05-22  0.66    0.48     0.81    0.56     0.70  19117.0\n",
-       "      2020-05-23  0.51    0.32     0.66    0.42     0.56      NaN"
+       "                    ML  Low_90  High_90  Low_50  High_50    DuFI\n",
+       "state date                                                      \n",
+       "TX    2020-06-22  1.55    1.37     1.70    1.45     1.59  6864.0\n",
+       "      2020-06-23  1.61    1.44     1.75    1.52     1.65  4101.0\n",
+       "      2020-06-24  1.48    1.32     1.62    1.38     1.51  4054.0\n",
+       "      2020-06-25  1.40    1.23     1.53    1.33     1.45  3752.0\n",
+       "      2020-06-26  1.31    1.15     1.44    1.23     1.35  3941.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -632,29 +632,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
-       "      <th>2020-05-19</th>\n",
-       "      <td>49912.0</td>\n",
-       "      <td>0.198492</td>\n",
+       "      <th>2020-06-22</th>\n",
+       "      <td>114881.0</td>\n",
+       "      <td>0.456864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-20</th>\n",
-       "      <td>51323.0</td>\n",
-       "      <td>0.204104</td>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>120370.0</td>\n",
+       "      <td>0.478693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-21</th>\n",
-       "      <td>52268.0</td>\n",
-       "      <td>0.207862</td>\n",
+       "      <th>2020-06-24</th>\n",
+       "      <td>125921.0</td>\n",
+       "      <td>0.500768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-22</th>\n",
-       "      <td>53449.0</td>\n",
-       "      <td>0.212558</td>\n",
+       "      <th>2020-06-25</th>\n",
+       "      <td>131917.0</td>\n",
+       "      <td>0.524613</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-05-23</th>\n",
-       "      <td>53449.0</td>\n",
-       "      <td>0.212558</td>\n",
+       "      <th>2020-06-26</th>\n",
+       "      <td>137624.0</td>\n",
+       "      <td>0.547309</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -663,14 +663,14 @@
       "text/plain": [
        "                  cumulative_cases  percent_population\n",
        "state date                                            \n",
-       "TX    2020-05-19           49912.0            0.198492\n",
-       "      2020-05-20           51323.0            0.204104\n",
-       "      2020-05-21           52268.0            0.207862\n",
-       "      2020-05-22           53449.0            0.212558\n",
-       "      2020-05-23           53449.0            0.212558"
+       "TX    2020-06-22          114881.0            0.456864\n",
+       "      2020-06-23          120370.0            0.478693\n",
+       "      2020-06-24          125921.0            0.500768\n",
+       "      2020-06-25          131917.0            0.524613\n",
+       "      2020-06-26          137624.0            0.547309"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
