--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -697,9 +697,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Foundations (Python 3.8.3)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_foundations_project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -711,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
