--- a/ipynb/Compile Final Results (Death).ipynb
+++ b/ipynb/Compile Final Results (Death).ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
     "FILTERED_REGION_CODES = ['AS', 'GU', 'PR', 'VI', 'MP']\n",
     "url = 'https://covidtracking.com/api/v1/states/daily.csv'\n",
     "states = pd.read_csv(url,\n",
-    "                     usecols=['date', 'state', 'positive'],\n",
+    "                     usecols=['date', 'state', 'death'],\n",
     "                     parse_dates=['date'],\n",
     "                     index_col=['state', 'date'],\n",
     "                     squeeze=True).sort_index()"
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 Done.\n"
+      "0 Done.\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,60 +288,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "HERD_IMMUNITY_THRESHOLD = 0.9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "df = states.to_frame()\n",
-    "df.columns = ['cumulative_cases']\n",
-    "df['new_cases'] = df.cumulative_cases.diff()\n",
-    "final_results['DuFI'] = np.nan\n",
-    "for index_tuple, row_series in final_results.iterrows():\n",
-    "    state_name = index_tuple[0]\n",
-    "    print(state_name)\n",
-    "    state_mask_series = (df.index.get_level_values('state') == state_name)\n",
-    "    time_stamp = index_tuple[1]\n",
-    "    date_mask_series = (df.index.get_level_values('date') == time_stamp)\n",
-    "    mask_series = state_mask_series & date_mask_series\n",
-    "    if df[mask_series].shape[0] > 0:\n",
-    "        case_rate = int(df[mask_series].new_cases.squeeze())\n",
-    "        if case_rate > 0:\n",
-    "            date_mask_series = (df.index.get_level_values('date') <= time_stamp)\n",
-    "            mask_series = state_mask_series & date_mask_series\n",
-    "            infected_population = int(df[mask_series].cumulative_cases[-1])\n",
-    "            if state_name == 'DC':\n",
-    "                population = 601_723\n",
-    "            else:\n",
-    "                mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
-    "                population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
-    "            days_until_full_infection = int((HERD_IMMUNITY_THRESHOLD*population - infected_population)/case_rate)\n",
-    "            final_results.loc[index_tuple, 'DuFI'] = days_until_full_infection\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "print('Done.')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -356,45 +302,6 @@
    "source": [
     "\n",
     "s.store_objects(final_results=final_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.min().idxmax())\n",
-    "final_results[state_mask_series].tail(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.max().idxmax())\n",
-    "final_results[state_mask_series].tail(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "state_name = final_results.groupby('state').DuFI.max().idxmax()\n",
-    "mask_series = (states_stats_df.State_Abbreviation == state_name)\n",
-    "population = states_stats_df[mask_series].Census_Population_2010.squeeze()\n",
-    "state_mask_series = (states.index.get_level_values('state') == state_name)\n",
-    "df = states[state_mask_series].to_frame()\n",
-    "df.columns = ['cumulative_cases']\n",
-    "df['percent_population'] = df.cumulative_cases.map(lambda x: 100*x/population)\n",
-    "df.tail(5)"
    ]
   },
   {
@@ -421,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
