--- a/ipynb/Compile Final Results.ipynb
+++ b/ipynb/Compile Final Results.ipynb
@@ -360,9 +360,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>ML</th>\n",
+       "      <th>Low_90</th>\n",
+       "      <th>High_90</th>\n",
+       "      <th>Low_50</th>\n",
+       "      <th>High_50</th>\n",
+       "      <th>DuFI</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">HI</th>\n",
+       "      <th>2020-07-16</th>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>43677.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-17</th>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>64366.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-18</th>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>53171.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-19</th>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>61145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-20</th>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>45292.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ML  Low_90  High_90  Low_50  High_50     DuFI\n",
+       "state date                                                       \n",
+       "HI    2020-07-16  0.84    0.03     1.63    0.38     1.11  43677.0\n",
+       "      2020-07-17  0.84    0.00     1.62    0.36     1.10  64366.0\n",
+       "      2020-07-18  0.84    0.01     1.64    0.39     1.13  53171.0\n",
+       "      2020-07-19  0.85    0.01     1.65    0.43     1.17  61145.0\n",
+       "      2020-07-20  0.85    0.00     1.65    0.38     1.13  45292.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.min().idxmax())\n",
@@ -371,9 +477,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>ML</th>\n",
+       "      <th>Low_90</th>\n",
+       "      <th>High_90</th>\n",
+       "      <th>Low_50</th>\n",
+       "      <th>High_50</th>\n",
+       "      <th>DuFI</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
+       "      <th>2020-07-16</th>\n",
+       "      <td>1.38</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>2170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-17</th>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>1496.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-18</th>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>2196.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-19</th>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>3055.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-20</th>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>3011.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ML  Low_90  High_90  Low_50  High_50    DuFI\n",
+       "state date                                                      \n",
+       "TX    2020-07-16  1.38    1.25     1.48    1.30     1.40  2170.0\n",
+       "      2020-07-17  1.15    1.04     1.26    1.10     1.19  1496.0\n",
+       "      2020-07-18  0.79    0.65     0.88    0.71     0.81  2196.0\n",
+       "      2020-07-19  0.69    0.56     0.79    0.61     0.71  3055.0\n",
+       "      2020-07-20  0.49    0.36     0.60    0.42     0.52  3011.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "state_mask_series = (final_results.index.get_level_values('state') == final_results.groupby('state').DuFI.max().idxmax())\n",
@@ -382,9 +594,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>cumulative_cases</th>\n",
+       "      <th>percent_population</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">TX</th>\n",
+       "      <th>2020-07-16</th>\n",
+       "      <td>292656.0</td>\n",
+       "      <td>1.163848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-17</th>\n",
+       "      <td>307572.0</td>\n",
+       "      <td>1.223166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-18</th>\n",
+       "      <td>317730.0</td>\n",
+       "      <td>1.263563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-19</th>\n",
+       "      <td>325030.0</td>\n",
+       "      <td>1.292594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-20</th>\n",
+       "      <td>332434.0</td>\n",
+       "      <td>1.322039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  cumulative_cases  percent_population\n",
+       "state date                                            \n",
+       "TX    2020-07-16          292656.0            1.163848\n",
+       "      2020-07-17          307572.0            1.223166\n",
+       "      2020-07-18          317730.0            1.263563\n",
+       "      2020-07-19          325030.0            1.292594\n",
+       "      2020-07-20          332434.0            1.322039"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "state_name = final_results.groupby('state').DuFI.max().idxmax()\n",
