Changed to single quotes and other administrivia

--- a/ipynb/Diagonal Chart.ipynb
+++ b/ipynb/Diagonal Chart.ipynb
@@ -203,7 +203,7 @@
     "        df = eval(\"s.load_object('{}')\".format(df_name))\n",
     "        if len(set(columns_list) - set(df.columns)) == 0:\n",
     "            print(\"{} = s.load_object('{}')\".format(df_name, df_name))\n",
-    "            print(\"{}\".format(df_name))"
+    "            print('{}'.format(df_name))"
    ]
   },
   {
