--- a/ipynb/Herd Immunity US States.ipynb
+++ b/ipynb/Herd Immunity US States.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "#hide_input\n",
     "import datetime\n",
-    "print(\"This page was last built on\", datetime.datetime.now().strftime(\"%d.%m.%y %H:%M:%S\"))"
+    "print('This page was last built on', datetime.datetime.now().strftime(\"%d.%m.%y %H:%M:%S\"))"
    ]
   },
   {
