--- a/ipynb/Plot Cumulative Deaths and Confirms.ipynb
+++ b/ipynb/Plot Cumulative Deaths and Confirms.ipynb
@@ -231,7 +231,7 @@
     "    if file_name.endswith('_df.pickle'):\n",
     "        df_name = file_name.split('.')[0]\n",
     "        print(\"{} = s.load_object('{}')\".format(df_name, df_name))\n",
-    "        print(\"{}\".format(df_name))"
+    "        print('{}'.format(df_name))"
    ]
   },
   {
