--- a/ipynb/US State Stats.ipynb
+++ b/ipynb/US State Stats.ipynb
@@ -3465,8 +3465,8 @@
     "    if file_name.endswith('_df.pickle') and file_name.startswith('states_'):\n",
     "        df_name = file_name.split('.')[0]\n",
     "        print(\"{} = s.load_object('{}')\".format(df_name, df_name))\n",
-    "        print(\"set({}.columns)\".format(df_name))\n",
-    "        print(\"states_stats_df.merge({}, left_index=True, right_index=True)\".format(df_name))\n",
+    "        print('set({}.columns)'.format(df_name))\n",
+    "        print('states_stats_df.merge({}, left_index=True, right_index=True)'.format(df_name))\n",
     "        df_name_list.append(df_name)\n",
     "        df = s.load_object(df_name)\n",
     "        cn_dict[df_name] = df.columns.tolist()"
