--- a/ipynb/plot_dbscan.ipynb
+++ b/ipynb/plot_dbscan.ipynb
@@ -94,14 +94,14 @@
     "\n",
     "print('Estimated number of clusters: %d' % n_clusters_)\n",
     "print('Estimated number of noise points: %d' % n_noise_)\n",
-    "print(\"Homogeneity: %0.3f\" % metrics.homogeneity_score(labels_true, labels))\n",
-    "print(\"Completeness: %0.3f\" % metrics.completeness_score(labels_true, labels))\n",
-    "print(\"V-measure: %0.3f\" % metrics.v_measure_score(labels_true, labels))\n",
-    "print(\"Adjusted Rand Index: %0.3f\"\n",
+    "print('Homogeneity: %0.3f' % metrics.homogeneity_score(labels_true, labels))\n",
+    "print('Completeness: %0.3f' % metrics.completeness_score(labels_true, labels))\n",
+    "print('V-measure: %0.3f' % metrics.v_measure_score(labels_true, labels))\n",
+    "print('Adjusted Rand Index: %0.3f'\n",
     "      % metrics.adjusted_rand_score(labels_true, labels))\n",
-    "print(\"Adjusted Mutual Information: %0.3f\"\n",
+    "print('Adjusted Mutual Information: %0.3f'\n",
     "      % metrics.adjusted_mutual_info_score(labels_true, labels))\n",
-    "print(\"Silhouette Coefficient: %0.3f\"\n",
+    "print('Silhouette Coefficient: %0.3f'\n",
     "      % metrics.silhouette_score(X, labels))\n",
     "\n",
     "# #############################################################################\n",
