--- a/ipynb/COVID Interventions.ipynb
+++ b/ipynb/COVID Interventions.ipynb
@@ -1373,7 +1373,7 @@
     "\n",
     "print('Estimated number of clusters: %d' % n_clusters_)\n",
     "print('Estimated number of noise points: %d' % n_noise_)\n",
-    "print(\"Silhouette Coefficient: %0.3f\"\n",
+    "print('Silhouette Coefficient: %0.3f'\n",
     "      % metrics.silhouette_score(data2D, labels))\n",
     "\n",
     "# #############################################################################\n",
