--- a/ipynb/State and National Provisional Counts.ipynb
+++ b/ipynb/State and National Provisional Counts.ipynb
@@ -194,7 +194,7 @@
     "    if file_name.endswith('_df.pickle') and ('state' in file_name):\n",
     "        df_name = file_name.split('.')[0]\n",
     "        print(\"{} = s.load_object('{}')\".format(df_name, df_name))\n",
-    "        print(\"{}.sample(5).T\".format(df_name))"
+    "        print('{}.sample(5).T'.format(df_name))"
    ]
   },
   {
