Deadliness vs Infectiousness

--- a/ipynb/Corona Virus Curve Fitting.ipynb
+++ b/ipynb/Corona Virus Curve Fitting.ipynb
@@ -364,7 +364,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -452,7 +452,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -860,7 +860,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -1228,7 +1228,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -1480,7 +1480,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -1945,7 +1945,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
