--- a/ipynb/Corona Virus Exploration.ipynb
+++ b/ipynb/Corona Virus Exploration.ipynb
@@ -1400,7 +1400,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -1596,7 +1596,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
@@ -2255,7 +2255,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
