--- a/ipynb/Create the Dot Density Map.ipynb
+++ b/ipynb/Create the Dot Density Map.ipynb
@@ -173,7 +173,7 @@
     "from matplotlib.ticker import MultipleLocator\n",
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
     "\n",
     "minor_multiple = 10_000\n",
