--- a/ipynb/Troubleshoot.ipynb
+++ b/ipynb/Troubleshoot.ipynb
@@ -1719,9 +1719,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COVID-19 (Python 3.7.8)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "covid19"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1733,7 +1733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
