--- a/ipynb/Unprecedented.ipynb
+++ b/ipynb/Unprecedented.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "\n",
     "# Use the following only if you are on a high definition device\n",
-    "from IPython.display import set_matplotlib_formats\n",
+    "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "\n",
     "set_matplotlib_formats('retina')"
    ]
