--- a/scatterplots/Deadliness vs Infectiousness (of Pandemics).ipynb
+++ b/scatterplots/Deadliness vs Infectiousness (of Pandemics).ipynb
@@ -86,7 +86,6 @@
    "cell_type": "markdown",
    "id": "a0b5d658-772d-4cf0-866a-09d98a7f53ce",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -98,7 +97,6 @@
    "cell_type": "markdown",
    "id": "6e558d35-2d58-40f4-8ee6-972994150db3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -142,7 +140,6 @@
    "cell_type": "markdown",
    "id": "4c9ed92a-9451-469e-9b9d-5919633f5d51",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -180,6 +177,17 @@
     "        CFRs_df[cn] = pd.to_numeric(CFRs_df[cn], errors='coerce', downcast='integer')\n",
     "    display(CFRs_df.head(7).T)\n",
     "    s.store_objects(CFRs_df=CFRs_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2161ccbc-3035-4e5b-b70a-8ab0a1fee60e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "\n",
+    "## Prepare the data for merging"
    ]
   },
   {
@@ -548,7 +556,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are a large number of Case Fatality Rates (CFRs) I don't have Basic Reproduction Number (R0s) for: Rubeola, ME, Respiratory Diphtheria, Tuberculosis, Leptospirosis, Variola Major, Variola Minor, Brucellosis, Lassa, Malaria, Tetanus, Hepatitis A, Botulism, Cholera, Mucormycosis, Alphaherpesvirus, Rabies, Aspergillosis, Capillariasis, Leishmaniasis, Glanders, Encephalopathies, Pneumonic Plague, Meningitis, Intestinal Anthrax, Legionellosis, Oropharyngeal Anthrax, Bubonic Plague, Septicemic Plague, Typhoid, DHF, Angiostrongyliasis, Marburg, Meningoencephalitis, Typhoidal Tularemia, EBOV, HFMD, HPS, VEE, Cutaneous Anthrax, Pneumonic Tularemia, Baylisascariasis, Yellow fever, Pulmonary Anthrax, Sleeping Sickness, EEE, GAE, and Influenza A.\n"
+      "And, there are a large number of Case Fatality Rates (CFRs) I don't have Basic Reproduction Number (R0s) for: Rubeola, ME, Respiratory Diphtheria, Tuberculosis, Leptospirosis, Variola Major, Variola Minor, Brucellosis, Lassa, Malaria, Tetanus, Hepatitis A, Botulism, Cholera, Mucormycosis, Alphaherpesvirus, Rabies, Aspergillosis, Capillariasis, Leishmaniasis, Glanders, Encephalopathies, Pneumonic Plague, Meningitis, Intestinal Anthrax, Legionellosis, Oropharyngeal Anthrax, Bubonic Plague, Septicemic Plague, Typhoid, DHF, Angiostrongyliasis, Marburg, Meningoencephalitis, Typhoidal Tularemia, EBOV, HFMD, HPS, VEE, Cutaneous Anthrax, Pneumonic Tularemia, Baylisascariasis, Yellow fever, Pulmonary Anthrax, Sleeping Sickness, EEE, GAE, and Influenza A.\n"
      ]
     },
     {
@@ -934,7 +942,7 @@
     "                               verbose=False).rename(columns={'left_item': 'CFR', 'right_item': 'R0'})\n",
     "mask_series = (typos_df.max_similarity < 1.0)\n",
     "df = typos_df[mask_series].sort_values(['max_similarity', 'CFR', 'R0'], ascending=[False, True, True])\n",
-    "f_str = \"There are a large number of Case Fatality Rates (CFRs) I don't have Basic Reproduction Number (R0s) for: \"\n",
+    "f_str = \"And, there are a large number of Case Fatality Rates (CFRs) I don't have Basic Reproduction Number (R0s) for: \"\n",
     "print(f_str + ssu.conjunctify_nouns(df.CFR.tolist()) + '.')\n",
     "df"
    ]
@@ -943,7 +951,6 @@
    "cell_type": "markdown",
    "id": "3f827752-9e43-4965-bc1b-81d617141135",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
