Update Deadliness vs Infectiousness (of Pandemics).ipynb

--- a/scatterplots/Deadliness vs Infectiousness (of Pandemics).ipynb
+++ b/scatterplots/Deadliness vs Infectiousness (of Pandemics).ipynb
@@ -99,6 +99,7 @@
    "cell_type": "markdown",
    "id": "6e558d35-2d58-40f4-8ee6-972994150db3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -132,6 +133,7 @@
    "cell_type": "markdown",
    "id": "4c9ed92a-9451-469e-9b9d-5919633f5d51",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -964,14 +966,6 @@
     "\n",
     "## Create a Boxed Scatterplot with a Log Scale in the Vertical Direction"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "941a13a2-b161-4db8-9cdc-7f9e4765b24c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
